tests/errors/builtin-expects-plain-string/main.pa
def length :: fun (list a) -> int = built-in length
